# HERoEHS-ERICA-Perception

erica_people_detector/: CMakeLists.txt  package.xml
erica_people_detector/include/erica_people_detector/: erica_people_detector.h
erica_people_detector/launch/: erica_people_detector.launch
erica_people_detector/src/: erica_people_detector.cpp  main.cpp
