<?xml version="1.0"?>
<package format="2">
  <name>erica_people_detector</name>
  <version>0.0.0</version>
  <description>The erica_people_detector package</description>

  <maintainer email="jay@todo.todo">jay</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>darknet_ros_msgs</depend>

</package>
